changed config.js so orbit controls can find THREE

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
      <div id="content"></div>
      <script src="jspm_packages/system.js"></script>
      <script src="config.js"></script>
+     <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+
 
      <script>
-       System.import('lib/index.js')
+       System.import('app.js')
       //  System.import('build.js')
      </script>
 
